feat: adding remaining User APIs
