# server/controllers/user.controller.js
@@ -1,6 +1,6 @@
 /*
 ###  License
-Copyright (c) 2024 Cascarita.io
+Copyright (c) 2025 Cascarita.io
 
 Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to use the Software for personal or academic purposes only, subject to the following conditions:
 
@@ -29,6 +29,8 @@ const {
   userNotFoundSchema,
   usersSchema,
   userErrorMessageSchema,
+  updateUserSchema,
+  registerUserSchema,
 } = require("../schemas/user.schema");
 const GroupController = require("./group.controller");
 const getUserInfoFromAuth0 = require("../utilityFunctions/auth0");
@@ -45,29 +47,57 @@ const UserController = function () {
     return userFound == null;
   };
 
+  /*
+    GET /api/users/groups/:group_id
+  */
+  var getUsersByGroupId = async function (req, res, next) {
+    try {
+      let { group_id } = req.params;
+      group_id = parseInt(group_id, 10);
+
+      if (isNaN(group_id)) {
+        throw new Error("Group id must be an integer");
+      }
+
+      const users = await User.findAll({
+        where: {
+          group_id: group_id,
+        },
+      });
+
+      if (!users) {
+        const message = userErrorMessageSchema.parse({
+          message: `No users were found within group with id: ${group_id}`,
+        });
+        return res.status(404).json(message);
+      }
+
+      const usersInGroup = usersSchema.parse(
+        users.map((user) => userSchema.parse(user.dataValues)),
+      );
+      return res.status(200).json(usersInGroup);
+    } catch (error) {
+      console.error(error);
+      const message = userErrorMessageSchema.parse({
+        message: error.message,
+      });
+      return res.status(500).json(message);
+    }
+  };
+
+  /*
+    POST /api/users/groups/:group_id
+  */
   var registerUserFromAuth0 = async function (req, res, next) {
     let { group_id } = req.params;
     group_id = parseInt(group_id, 10);
+
+    if (isNaN(group_id)) {
+      throw new Error("Group id must be an integer");
+    }
+
     const userBasicInfo = await getUserInfoFromAuth0(req.headers.authorization);
 
-    // let group_id = groupId;
-
-    // if (!group_id) {
-    //   try {
-    //     const newGroup = {
-    //       name: name,
-    //       street_address: streetAddress,
-    //       city,
-    //       state,
-    //       zip_code: zipCode,
-    //       logo_url: logoUrl,
-    //     };
-
-    //     group_id = await GroupController.createGroup(newGroup);
-    //   } catch (error) {
-    //     next(error);
-    //   }
-    // }
     const first_name =
       userBasicInfo.given_name ||
       (userBasicInfo.name ? userBasicInfo.name.split(" ")[0] : "");
@@ -101,73 +131,134 @@ const UserController = function () {
 
       await User.build(newUser).validate();
       const result = await User.create(newUser);
-      console.log("ARMANDO IS HERE: ", result);
       const registeredUser = userSchema.parse(result.dataValues);
       return res.status(201).json(registeredUser);
     } catch (error) {
       console.error(error);
-      next(error);
+      const message = userErrorMessageSchema.parse({
+        message: error.message,
+      });
+      return res.status(500).json(message);
     }
   };
 
-  var logInUser = function (req, res) {
-    if (!req.user) {
-      return res.status(401).json({ message: "unauthorized" });
-    }
-
-    res.status(200).json({ user: req.user });
-  };
-
+  /*
+    GET /api/users/:id
+  */
   var getUserByUserId = async function (req, res, next) {
     try {
-      const { id } = req.params;
+      let { user_id } = req.params;
+      user_id = parseInt(user_id, 10);
 
-      if (isNaN(id)) {
-        res.status(400);
+      if (isNaN(user_id)) {
         throw new Error("user id must be an integer");
       }
 
-      const user = await User.findByPk(id);
+      const user = await User.findByPk(user_id);
       if (!user) {
-        res.status(404);
-        throw new Error(`no user was found with id ${id}`);
+        const message = userErrorMessageSchema.parse({
+          message: `No user was found with id: ${user_id}`,
+        });
+        return res.status(404).json(message);
       }
-
-      return res.json(user);
+      const foundUser = userSchema.parse(user.dataValues);
+      return res.status(200).json(foundUser);
     } catch (error) {
-      next(error);
+      console.error(error);
+      const message = userErrorMessageSchema.parse({
+        message: error.message,
+      });
+      return res.status(500).json(message);
     }
   };
 
+  /*
+    POST /api/users/:id
+  */
   var updateUserById = async function (req, res, next) {
     try {
-      const { id } = req.params;
+      let { user_id } = req.params;
+      user_id = parseInt(user_id, 10);
 
-      if (isNaN(id)) {
-        res.status(400);
+      if (isNaN(user_id)) {
         throw new Error("user id must be an integer");
       }
 
-      let currentUser = await User.findByPk(id);
+      let user = await User.findByPk(user_id);
 
-      if (!currentUser) {
-        res.status(404);
-        throw new Error(`no user was found with id ${id}`);
+      if (!user) {
+        const message = userErrorMessageSchema.parse({
+          message: `No user was found with id: ${user_id}`,
+        });
+        return res.status(404).json(message);
       }
 
-      Object.keys(req.body).forEach((key) => {
-        currentUser[key] = req.body[key] ? req.body[key] : currentUser[key];
+      const parsedBody = updateUserSchema.parse(req.body);
+
+      Object.keys(parsedBody).forEach((key) => {
+        user[key] = parsedBody[key] !== undefined ? parsedBody[key] : user[key];
       });
 
-      await currentUser.validate();
-      await currentUser.save();
-
-      res.json(currentUser);
+      await user.validate();
+      user = await user.save();
+      const updatedUser = userSchema.parse(user.dataValues);
+      res.status(200).json(updatedUser);
     } catch (error) {
-      next(error);
+      console.error(error);
+      const message = userErrorMessageSchema.parse({
+        message: error.message,
+      });
+      return res.status(500).json(message);
     }
   };
 
+  /*
+    DELETE /api/users/:id
+  */
+  var deleteUserById = async function (req, res, next) {
+    try {
+      let { user_id } = req.params;
+      user_id = parseInt(user_id, 10);
+
+      if (isNaN(user_id)) {
+        throw new Error("user id must be an integer");
+      }
+
+      let user = await User.findByPk(user_id);
+
+      if (!user) {
+        const message = userErrorMessageSchema.parse({
+          message: `No user was found with id: ${user_id}`,
+        });
+        return res.status(404).json(message);
+      }
+
+      await User.destroy({
+        where: {
+          id: user_id,
+        },
+      });
+      let deletedUser = await User.findByPk(user_id);
+      if (!deletedUser) {
+        return res.status(204).json();
+      } else {
+        const message = userErrorMessageSchema.parse({
+          message: `Failure to delete user with id: ${user_id}`,
+        });
+        return res.status(500).json(message);
+      }
+    } catch (error) {
+      console.error(error);
+      const message = userErrorMessageSchema.parse({
+        message: error.message,
+      });
+      return res.status(500).json(message);
+    }
+  };
+
+  /*
+    GET /api/users
+   */
   var fetchUser = async function (req, res, next) {
     try {
       // Access the email from the query parameters
@@ -190,135 +281,60 @@ const UserController = function () {
         return res.status(404).json(notFoundResponse);
       }
     } catch (error) {
-      console.error("Failed to fetch existing user:", error);
-      next(error);
+      console.error(error);
+      const message = userErrorMessageSchema.parse({
+        message: error.message,
+      });
+      return res.status(500).json(message);
     }
   };
 
-  var getUsersByGroupId = async function (req, res, next) {
-    try {
-      const { group_id } = req.params;
-
-      if (isNaN(group_id)) {
-        res.status(400);
-        throw new Error("group id must be an integer");
-      }
-
-      const users = await User.findAll({
-        where: {
-          group_id: group_id,
-        },
-      });
-
-      if (!users) {
-        res.status(404);
-        throw new Error(`no users were found with group id ${group_id}`);
-      }
-
-      const usersInGroup = usersSchema.parse(
-        users.map((user) => userSchema.parse(user.dataValues)),
-      );
-      return res.status(200).json(usersInGroup);
-    } catch (error) {
-      next(error);
-    }
-  };
-
-  var deleteUserById = async function (req, res, next) {
-    try {
-      let deleteUser = await User.destroy({
-        where: {
-          id: req.params["id"],
-        },
-      });
-
-      if (deleteUser === 0) {
-        throw new Error("no user found with the given id");
-      }
-
-      return res.status(200).json();
-    } catch (error) {
-      next(error);
-    }
-  };
-
-  var updateUserById = async function (req, res, next) {
-    try {
-      let currentUser = await User.findOne({
-        where: {
-          id: req.params["id"],
-        },
-        // Cannot exlude password, created_at, updated_at because of "SequelizeValidationError: notNull Violation: password field is required" comming from "/server/models/user.js"
-        // attributes: { exclude: ["password", "created_at", "updated_at"] },
-      });
-
-      if (!currentUser) {
-        res.status(400);
-        throw new Error("user with given id was not found");
-      }
-
-      if (req.body?.email) {
-        const { group_id, email } = req.body;
-        const existingUser = await User.findOne({ where: { group_id, email } });
-        if (existingUser) {
-          return res
-            .status(400)
-            .json({ error: "Email already exists within the group" });
-        }
-      }
-
-      Object.keys(req.body).forEach((key) => {
-        currentUser[key] = req.body[key] ? req.body[key] : currentUser[key];
-      });
-
-      await currentUser.validate();
-      await currentUser.save();
-
-      return res.status(200).json(currentUser);
-    } catch (error) {
-      next(error);
-    }
-  };
-
+  /*
+    POST /api/users
+  */
   var addUser = async function (req, res, next) {
     try {
-      const { first_name, last_name, email, group_id } = req.body;
+      const parsedBody = registerUserSchema.parse(req.body);
+      const { first_name, last_name, email, group_id, language_id, picture } =
+        parsedBody;
 
       // Check if email is unique within the group, so email can appear once per group but can appear across multiple groups
       const existingUser = await User.findOne({ where: { email, group_id } });
       if (existingUser) {
-        // TODO: Give client feedback that email already exists within the group
-
-        return res
-          .status(400)
-          .json({ error: "Email already exists within the group" });
+        const message = userErrorMessageSchema.parse({
+          message: `Email already exists within the group ${group_id}: ${email}`,
+        });
+        return res.status(400).json(message);
       }
 
       const newUser = {
         first_name,
         last_name,
         email,
-        language_id: 1,
+        language_id,
         group_id,
+        picture,
       };
 
       await User.build(newUser).validate();
       const result = await User.create(newUser);
-
-      return res.status(201).json(result);
+      const newUserCreated = userSchema.parse(result.dataValues);
+      return res.status(201).json(newUserCreated);
     } catch (error) {
-      next(error);
+      console.error(error);
+      const message = userErrorMessageSchema.parse({
+        message: error.message,
+      });
+      return res.status(500).json(message);
     }
   };
 
   return {
     registerUserFromAuth0,
-    logInUser,
     getUserByUserId,
     updateUserById,
     getUsersByGroupId,
     deleteUserById,
-    updateUserById,
     addUser,
     fetchUser,
   };
